# omol

./: .gitignore  CLAUDE.md  TODO.md
docs/plans/: 2026-03-09-omol-filter-interface-design.md  2026-03-16-spyhop-frontend-design.md  2026-03-16-spyhop-frontend-implementation.md
notes/: ase-db-exploration.md  ase-db.md  open_questions.md  s3-access-and-storage-tiers.md
omol-notes/: DATASET.md  OMOL_README.md  ase-db.md  directory-structure-analysis.md  open_questions.md  santiago-derived-descriptors.md
scripts/: copied-test-downloader.py  download_4m.py  explore_ase_db.py  explore_outfile
spyhop/: README.md  app.py  index.html  pyproject.toml
spyhop/scripts/: build_index.py  estimate_file_sizes.py
spyhop/src/spyhop/: __init__.py  client.py  query.py
