[project]
name = "spyhop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Owen Price Skelly", email = "21372141+OwenPriceSkelly@users.noreply.github.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.12.5",
    "typer>=0.12",
]

[project.scripts]
spyhop = "spyhop:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
